css/styles.css
.content {
	width: 100%;
	font-family: 'Roboto', sans-serif;
	font-size: 16px;
	color: #7d97ad;
}

img {
	max-width: 100%;
}

/*header, nav, footer, section, div {
	box-sizing: border-box;
}*/

/*
 *
 * Header
 *
 */

header {
	width: 100%;
	margin: 10px;
}

.logo {
	margin-left: 10px;
	margin-top: 10px;
	vertical-align: top;
	float: left;
}

.title {
	width: 100%;
	font-size: 18px;
	margin-right: 10px;
	text-transform: uppercase;
	text-align: right;
	vertical-align: top;
	color: #2d3c49;
}

h1 {
	margin-top: 10px;
}

.subtitle {
	margin-top: -10px;
}

hr {
	width: 100%;
	height: 2px;
	border-width: 0;
	color: #7d97ad;
	background-color: #7d97ad;
}

/*
 *
 * Main
 *
 */

.about_me {
	margin: 10px;
}

.work {
	margin: 10px;
}

.projects {
	text-align: center;
	justify-content: space-between;
}

.one_block {
	width: 100%;
	text-align: center;
	color: #2d3c49;
	margin-bottom: 30px;
	box-sizing: border-box;

}

.proj_title {
	margin: -10px;
	text-transform: uppercase;
}

.proj_source {
	color: #7d97ad;
	font-size: 12px;
	word-wrap: break-word;
}

 /*
  *
  * Footer
  *
  */
footer{
	width: 100%;
}

.contact {
	width: 100%;
	background-color: #7d97ad;
	padding: 10px;
	text-align: center;
}

.social-icon {
	display: inline;
	vertical-align: middle;
	padding: 5px;

}
.social-reference {
	padding: 10px;
	display: inline;
	text-decoration-line: none;
	color: #2d3c49;
}

